# server/src/db/queries.js
@@ -16,7 +16,7 @@ const insertUser = `
   `;
 const userFindByPhoneOrID = `SELECT * FROM users WHERE id = ? OR phone = ?`;
 const userFindGeneric = (key, value) => {
-  return `SELECT * FROM users WHERE ${key} = ${value}`;
+  return `SELECT id, first_name, last_name,password, phone, role, created_at, updated_at FROM users WHERE ${key} = '${value}'`;
 }
 
 module.exports = {
