# server/src/routes/index.js
@@ -1,12 +1,12 @@
 const express = require("express");
 const authRoutes = require("./auth/index.js");
-// const userRoutes = require("./user/index");
+const userRoutes = require("./user/index.js");
 // const adminRoutes = require("./admin/index");
 
 const router = express.Router();
 
 router.use("/auth", authRoutes);
-// router.use("/user", userRoutes);
+router.use("/user", userRoutes);
 // router.use("/admin", adminRoutes);
 
 router.get("/", (req, res) => {
