# server/src/routes/user/index.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const { authenticateToken } = require("../../middleware/auth");
+const { getUserInfo } = require("../../controllers/user");
+const router = express.Router();
+
+router.get("/", authenticateToken, getUserInfo);
+
+module.exports = router;
